--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -279,6 +279,22 @@
 -smarthome
 -smartbacks
 
+ OCaml lanaguage file
+*.ml
+-autoindent
+-syntax ocaml
+-smarthome
+-smartbacks
+-istep 2
+
+ OCaml language interface
+*.mli
+-autoindent
+-syntax ocaml
+-smarthome
+-smartbacks
+-istep 2
+
  Perl
 *
 +#!\+\[ 	]\+\[a-z/]/perl\>
