--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -279,6 +279,14 @@
 -smarthome
 -smartbacks
 
+ SML
+*.sml
+-autoindent
+-syntax sml
+-smarthome
+-smartbacks
+-istep 2
+
  OCaml lanaguage file
 *.ml
 -autoindent
