--- a/joerc.in
+++ b/joerc.in
@@ -208,10 +208,30 @@
 	-msold macro		Macro to execute when existing files are saved
 
 	Macros for the above options are in the same format as in the key
+	binding section below- but without the key name strings.
+
+
 	-square			Rectangular block mode
 	These define the language syntax for ^G (goto matching delimiter):
-	Macros for the above options are in the same format as in the key
-	binding section below- but without the key name strings.
+
+	-single_quoted		Text between '  ' should be ignored (this is
+				not good for regular text since ' is
+				normally used alone as an apostrophe)
+
+	-c_comment		Text between /* */ should be ignored
+
+	-cpp_comment		Text after // should be ignored
+
+	-pound_comment		Text after # should be ignored
+
+	-vhdl_comment		Text after -- should be ignored
+
+	-semi_comment		Text after ; should be ignored
+
+	-text_delimiters begin=end:if=elif=else=endif
+	-text_delimiters "begin end; if else; if elif else endif"
+				Define word delimiters
+
  Default local options
 -highlight
 -istep 2
@@ -339,18 +359,24 @@
 -smarthome
 -smartbacks
 -pound_comment
+-single_quoted
+
 *.pl
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
 -pound_comment
+-single_quoted
+
 *.pm
 -autoindent
 -syntax perl
 -smarthome
 -smartbacks
 -pound_comment
+-single_quoted
+
  SQL file
 *.c
 -autoindent
@@ -359,6 +385,9 @@
 -smartbacks
 -purify
 -single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 *.cpp
 -autoindent
 -syntax c
@@ -366,6 +395,9 @@
 -smartbacks
 -purify
 -single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 *.c++
 -autoindent
 -syntax c
@@ -373,6 +405,9 @@
 -smartbacks
 -purify
 -single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
  C language header file
 *.h
 -autoindent
@@ -381,6 +416,9 @@
 -smartbacks
 -purify
 -single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 *.hpp
 -autoindent
 -syntax c
@@ -388,6 +426,9 @@
 -smartbacks
 -purify
 -single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 *.h++
 -autoindent
 -syntax c
@@ -395,6 +436,9 @@
 -smartbacks
 -purify
 -single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
  Verilog file
 *.v
 -autoindent
@@ -404,6 +448,8 @@
 -smartbacks
 -purify
 -c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
  Verilog header file
 *.vh
 -autoindent
@@ -413,6 +459,8 @@
 -smartbacks
 -purify
 -c_comment
+-cpp_comment
+-text_delimiters `ifdef|`ifndef=`else=`endif:begin=end:case|casex|casez=endcase:function=endfunction:module=endmodule:task=endtask:attribute=endattribute:primitive=endprimitive:table=endtable
  VHDL file
 *.vhd
 -autoindent
@@ -422,6 +470,7 @@
 -smartbacks
 -purify
 -vhdl_comment
+-text_delimiters entity|ENTITY|if|IF|component|COMPONENT|loop|LOOP|configuration|CONFIGURATION|units|UNITS|record|RECORD|case|CASE|function|FUNCTION|package|PACKAGE|architecture|ARCHITECTURE|block|BLOCK|process|PROCESS|generate|GENERATE=end|END
  XML
 *.xml
 -wordwrap
@@ -477,96 +526,117 @@
 -autoindent
 -syntax csh
 -pound_comment
+
 *.csh
 -autoindent
 -syntax csh
 -pound_comment
+
 *.login
 -autoindent
 -syntax csh
 -pound_comment
+
 *.logout
 -autoindent
 -syntax csh
 -pound_comment
+
  TCSH
 *
 +#!\+\[ 	]\+\[a-z/]/tcsh\>
 -autoindent
 -syntax csh
 -pound_comment
+
 *.tcsh
 -autoindent
 -syntax csh
 -pound_comment
+
 *.tcshrc
 -autoindent
 -syntax csh
 -pound_comment
+
  Shell
 *
 +#!\+\[ 	]\+\[a-z/]/sh\>
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 *.sh
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 *profile
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
  BASH Shell
 *
 +#!\+\[ 	]\+\[a-z/]/bash\>
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 *.bash
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 *.bash_login
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 *.bash_logout
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
  LISP
 *.lisp
 -autoindent
 -syntax lisp
 -semi_comment
+
 *.lsp
 -autoindent
 -syntax lisp
 -semi_comment
+
 *.el
 -autoindent
 -syntax lisp
 -semi_comment
+
  KSH
 *
 +#!\+\[ 	]\+\[a-z/]/ksh\>
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
 *.ksh
 -autoindent
 -syntax sh
 -pound_comment
+-text_delimiters do=done:if=elif=else=fi:case=esac
  Makefile
 *akefile
 -autoindent
 -syntax conf
 -pound_comment
+
 *AKEFILE
 -autoindent
 -syntax conf
 -pound_comment
+
  Pascal
 *.p
 -autoindent
