--- a/jpicorc.in
+++ b/jpicorc.in
@@ -46,6 +46,10 @@
 
  -backpath path Directory to store backup files
 
+ -floatmouse	Clicking past end of line moves the cursor past the end
+
+ -rtbutton	Use the right mouse button for action, instead of the left
+
  -nonotice	Disable copyright notice
 
  -noxon		Attempt to turn off ^S/^Q processing
@@ -717,6 +721,7 @@
  Use ^@ through ^_, ^# and ^? for Ctrl chars
  Use SP for space
  Use a TO b to generate a range of characters
+ Use MDOWN, MDRAG, MUP, M2DOWN, M2DRAG, M2UP, M3DOWN, M3DRAG, M3UP for mouse
 
  You can also use termcap string capability names.  For example:
 
@@ -791,6 +796,19 @@ shell		^[ z
 shell		^[ Z
 shell		^[ ^Z
 stop		^[ )		Stop recording
+ Mouse handling
+defmdown	MDOWN		Move the cursor to the mouse location
+defmup		MUP
+defmdrag	MDRAG		Select a region of characters
+defm2down	M2DOWN		Select the word at the mouse location
+defm2up		M2UP
+defm2drag	M2DRAG		Select a region of words
+defm3down	M3DOWN		Select the line at the mouse location
+defm3up		M3UP
+defm3drag	M3DRAG		Select a region of lines
+
+xtmouse		^[ [ M		Introduces an xterm mouse event
+
 
 :main			Text editing window
 :inherit windows
