--- a/joerc.in
+++ b/joerc.in
@@ -804,6 +804,20 @@
 
 {Math
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,    next screen ^[.     \i
+\i \i \uCOMMANDS\u (hit ESC m for math)  \uFUNCTIONS\u                                    \|\i \i
+\i \i Type ^[ m for math:            \uFunctions\u                                    \|\i \i
+\i \i     dec decimal mode           sinh cosh tanh asinh acosh atanh             \|\i \i
+\i \i     ins type result into file  sqrt cbrt exp ln log                         \|\i \i
+\i \i    eval evaluate block         int floor ceil abs erg ergc                  \|\i \i
+\i \i    0xff enter number in hex    int floor ceil abs erf erfc                  \|\i \i
+\i \i    3e-4 floating point decimal                                              \|\i \i
+\i \i    a=10 assign a variable                                                   \|\i \i
+\i \i a=1:b=2 multiple expressions                                                \|\i \i
+\i \i    e pi constants              \uOperators\u                                    \|\i \i
+\i \i     ans previous result        ^  * / %  + -  < <= > >= == !=  &&  ||       \|\i \i
+
+{Names
+\i   Help Screen    \|turn off with ^KH    prev. screen ^[,    next screen ^[.     \i
 \i \i Hit TAB at file name prompts to generate menu of file names                 \|\i \i
 \i \i Or use up/down keys to access history of previously entered names           \|\i \i
 \i \i Special file names:                                                         \|\i \i
