--- a/joerc.in
+++ b/joerc.in
@@ -58,6 +58,8 @@
 
  -force		Force final newline when files are saved
 
+ -nolocks	If you don't want file locks to be used
+
  -nobackups	If you don't want backup files to be created
 
  -lightoff	Turn off highlighting after block copy or move
