--- a/jpicorc.in
+++ b/jpicorc.in
@@ -61,6 +61,8 @@
 
 -force		Force final newline when files are saved
 
+ -nolocks	If you don't want file locks to be used
+
  -nobackups	If you don't want backup files to be created
 
 -exask		^KX always confirms file name
