--- a/jstarrc.in
+++ b/jstarrc.in
@@ -54,6 +54,7 @@
  -marking	Text between ^KB and cursor is highlighted (use with -lightoff)
  -asis		Characters 128 - 255 shown as-is
  -force		Force final newline when files are saved
+ -nolocks	If you don't want file locks to be used
  -nobackups	If you don't want backup files to be created
  -lightoff	Turn off highlighting after block copy or move
  -exask		^KX always confirms file name
