Get joe to compile on irix

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,11 +14,23 @@ EXTRA_DIST = COPYING LIST HACKING ChangeLog NEWS README INSTALL INSTALL.AMIGA IN
 sysconf_joedir = $(sysconfdir)/joe
 sysconf_joe_DATA = joerc jmacsrc jstarrc rjoerc jpicorc
 
-%rc : %rc.in
-	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,' < $< > $@
+joerc : joerc.in
+	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,' < joerc.in > $@
 
-%.1 : %.1.in
-	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(DESTDIR)$(bindir),' < $< > $@
+jmacsrc : jmacsrc.in
+	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,' < jmacsrc.in > $@
+
+jstarrc : jstarrc.in
+	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,' < jstarrc.in > $@
+
+jpicorc : jpicorc.in
+	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,' < jpicorc.in > $@
+
+rjoerc : rjoerc.in
+	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,' < rjoerc.in > $@
+
+joe.1 : joe.1.in
+	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(DESTDIR)$(bindir),' < joe.1.in > $@
 
 MOSTLYCLEANFILES = joerc jmacsrc jstarrc rjoerc jpicorc joe.1
 
