Enable joe_state, document backpath parsing bugs

--- a/jstarrc.in
+++ b/jstarrc.in
@@ -66,7 +66,11 @@
  -keepup	%k and %c status line escape sequences updated frequently
  -pg nnn	No. lines to keep for PgUp/PgDn
  -csmode	^KF after a pervious search does a ^L instead
- -backpath path Directory to store backup files
+
+ -backpath path
+		Directory to store backup files (one space between 'backpath' and
+		the 'path', no trailing spaces or comments after the path).
+
  -floatmouse	Clicking past end of line moves the cursor past the end
  -rtbutton	Use the right mouse button for action, instead of the left
  -nonotice	Disable copyright notice
@@ -107,7 +111,7 @@
 
  -autoswap	Swap markb with markk when necessary
 
- -joe_state     Use ~/.joe_state file
+-joe_state     Use ~/.joe_state file
 
  -mouse		Enable mouse support
 
