--- a/jpicorc.in
+++ b/jpicorc.in
@@ -1215,6 +1215,7 @@ uparwmenu	^P
 uparwmenu	^[ [ A
 uparwmenu ^# A
 uparwmenu	^[ O A
+defm2down	M2DOWN		Hits return key
 
 :query			Single-key query window
 :inherit windows
