--- a/rjoerc.in
+++ b/rjoerc.in
@@ -1304,6 +1304,7 @@ uparwmenu	^P
 uparwmenu	^[ [ A
 uparwmenu	^# A
 uparwmenu	^[ O A
+defm2down	M2DOWN		Hits return key
 
 :query			Single-key query window
 :inherit windows
