--- a/syntax/diff.jsf.in
+++ b/syntax/diff.jsf.in
@@ -6,6 +6,7 @@
 
 # Color definitions
 =Idle
+=Options	blue
 =FileNew	bold green
 =FileOld	bold red
 =DiffStuff	magenta
@@ -15,6 +16,7 @@
 
 :reset Idle
 	*		goo
+	"d"		goo		buffer
 	"-"		preudiff	buffer
 	"*"		precdiff	buffer
 	"0-9"		ndiff		recolor=-1
@@ -33,8 +35,14 @@ done
 done
 	"*"		precdiff
 
+:options Options
+	*		options
+	"\n"		reset
+
 :goo Idle
-	*		goo
+	*		goo		strings
+	"diff"		options		recolor=-4
+done
 	"\n"		reset
 
 :udiff Idle
@@ -58,6 +66,7 @@ done
 
 :udiffhunk Idle
 	*		reset
+	"d"		goo		buffer
 	"-"		udiffoldordel	recolor=-1
 	"+"		udiffadd	recolor=-1
 	" "		udiffctx	recolor=-1
