--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -119,6 +119,9 @@
 
  -mouse		Enable mouse support
 
+ -joexterm	If you are using Joe's modified Xterm, which makes -mouse
+		mode work better (cut & paste work transparently).
+
  -square	Rectangular block mode
 
  -bg_text color	Set background color for text.
@@ -129,6 +132,9 @@
  -bg_msg color	Set background color for messages.
 
 		For example: -bg_text bg_blue
+
+ -search_prompting
+		Search prompts with previous search request.
 
  Status line definition strings.  -lmsg defines the left-justified string and
  -rmsg defines the right-justified string.  The first character of -rmsg is
@@ -986,6 +992,8 @@ aspellword	^[ $
 
 ctrl		^Q		Quote Ctrl chars
        ctrl		`		Quote Ctrl chars
+
+paste			^[ [ 2 0 0 ~		Bracketed paste
 
 insc			^[ [ 2 ~
 insc			^[ [ L			SCO
