--- a/joerc.in
+++ b/joerc.in
@@ -138,7 +138,7 @@
 
  -icase         Search is case insensitive by default.
 
- -wrap          Search wraps
+-wrap          Search wraps
 
  -autoswap	Swap markb with markk when necessary
 
@@ -162,6 +162,9 @@
 		For example: -bg_text bg_blue
 
 -search_prompting
+		Search prompts with previous search request.
+
+ Status line definition strings.  -lmsg defines the left-justified string and
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
  in these strings:
