--- a/joerc.in
+++ b/joerc.in
@@ -1,4 +1,3 @@
-
                          Initialization file for JOE
                                 Standard Joe
 
@@ -458,6 +457,19 @@
 -single_quoted
 
  SQL file
+*.sql
+-autoindent
+-syntax sql
+-smarthome
+-smartbacks
+-purify
+-single_quoted
+-c_comment
+-vhdl_comment
+-cpp_comment
+-text_delimiters BEGIN|Begin|begin=END|End|end
+
+ AWK language file
 *.c
 -autoindent
 -syntax c
