--- a/jstarrc.in
+++ b/jstarrc.in
@@ -439,6 +439,27 @@
 -cpp_comment
 -text_delimiters BEGIN|Begin|begin=END|End|end
 
+ AWK language file
+*.awk
+-autoindent
+-syntax awk
+-smarthome
+-smartbacks
+-purify
+-pound_comment
+
+ YACC
+*.y
+-autoindent
+-syntax c
+-smarthome
+-smartbacks
+-purify
+-single_quoted
+-c_comment
+-cpp_comment
+-text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
+
  C language file
 *.c
 -autoindent
@@ -752,11 +773,6 @@
 *.FOR
 -autoindent
 -syntax fortran
-
- YACC
-*.y
--autoindent
--syntax yacc
 
  LEX
 *.l
