--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -458,6 +458,14 @@
 -cpp_comment
 -text_delimiters #if|#ifdef|#ifndef=#elif=#else=#endif
 
+ COBOL
+*.cbl
+-syntax cobol
+-smarthome
+
+*.cob
+-syntax cobol
+
  C language file
 *.c
 -autoindent
